# CodeShit

./: .gitignore  README.md
Bash/: gcclm.bash  h.bash
CodeThemes/: .names.md.kate-swp  Archive.vsix  names.md  names.txt  vtk-congobasin-0.0.1.vsix
D/: 02_io.c  07_timeShii.c  09_ptrOfPtrs.c  11_arrays.c  12_ptrArray.c  13_cmdLnInput.c  1_prntVar.c  2_io.c  3_shopCart.c  4_inSys.c  5_desCtrl.c  6_fnRcs.c  8_pointers.c  CMakeLists.txt  Calculator.c  pr.c  reciept1.txt  reciept_1.txt  tempCodeRunnerFile.c
D/.zed/: tasks.json
D/T1E1/: Calculator.c  lore_1.c
D/T2E1/: 01  01.c  02  02.c  03  03.c  04.c  DMA.c  args.c  arrayOfStruct.c  blehh.txt  enums.c  ints.c  io.c  linked_list.c  ll1.c  ll2.c  pointers.c  pointerst.c  structs.c  tempCodeRunnerFile.c  typedef.c  unions.c
D/T2E1/test/: test1.txt  test3.c
D/adv/: assert.c
D/adv/tsodily_malloc/: Makefile  heap  main.c
D/bookmark/: code.c
D/bookmark/Data/: db.csv
D/bookmark/kx/: bac.csv  mistakes.c  preach.txt
D/genRec/: code.c  code2.c  items.csv  text.txt
D/genRec/Rs/: reciept_1.txt  reciept_2.txt
D/mightBePro/: code1.c
D/test/: 01_remShii.c  02.c  02_inputs.c  03_advInputs.c  04_ptrs.c  06_ptrMethods.c  esc.txt  ex1.txt  palin.c  reciept.c  revArr.c  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c
D/test/prac/: 01mallo1.c  02mallo2.c  03reallo1.c  04reallo2.c  05union1.c  06union2.c
Python/: OrphanCatering.py  ass3.py  pattern.java  pylearn.py  tempCodeRunnerFile.py  test1.py  test3.py  (+1 more)
(+740 files in other folders)
